# bevy_bird

./: .gitignore  Cargo.toml  README.md  bevy_bird.js  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yaml
assets/objects/: bird.glb  pipe.glb
src/: gameplay.rs  lib.rs  main.rs  score_save.rs
src/audio/: mod.rs
src/player/: camera.rs  controls.rs  inputs.rs  mod.rs
src/scene/: lights.rs  mod.rs  pipes.rs
src/ui/: input_prompts.rs  mod.rs  score.rs
wasm/: index.html  marbles.js
