[package]
name = "bevy_bird"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
web = []
desktop = []

max_difficulty = []
dynamic_linking = ["bevy/dynamic_linking"]
debugging = [
    "dep:bevy_mod_debugdump",
    "dep:bevy-inspector-egui",
    "avian3d/debug-plugin"
]

# todo: Check https://github.com/tbillington/bevy_best_practices build settings for release

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z' # For size
panic = 'abort'
debug = 0
codegen-units = 1
strip = true
lto = true

[dependencies]
avian3d  = { git = "https://github.com/Jondolf/avian.git", branch = "main" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", branch = "main" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", branch = "bevy_main" }
bevy_kira_audio = "0.23.0"
bevy_rand = { version = "0.10", features = ["wyrand"] }
rand_core = "0.9"
ron = "0.10"
serde = { version = "1", features = ["derive"] }
bevy_mod_debugdump = { version = "0.12", optional = true }
bevy-inspector-egui = { version = "0.31", optional = true }

# Needed for bevy_rand and wasm
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.10", features = ["wasm_js"] }

# todo: check if there are any more features that can be disabled (per platform as well?)
[dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    "hdr",
#    "vorbis",
    "x11",
    "bevy_gizmos",
#    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]